2001-09-22  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-isize-sports.el (shimbun-isize-sports-group-alist):
	Follow the change of the Web site.

2001-09-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-ucs.el (w3m-euc-japan-encoder): Convert lain-jisx0201 to ASCII;
	Avoid deep nesting.
	(TopLevel): Don't require `w3m-macro'.

2001-09-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-om.el (w3m-expand-path-name): Cancel last change.

2001-09-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-expand-path-name): Except Mule2, define alias of
	`expand-file-name'.

	* w3m-om.el (w3m-expand-path-name): Re-implemented.

	* w3m-e20.el (w3m-expand-path-name): Removed.

	* w3m-e21.el (w3m-expand-path-name): Ditto.

	* w3m-xmas.el (w3m-expand-path-name): Ditto.

2001-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-colon-keywords-file): Renamed from
	`w3mhack-bind-colon-keywords'; generate a file which contains a
	list of colon keywords; don't bind colon keywords.
	(w3mhack-colon-keywords-file): New constant.

	* w3m.el: Load w3m-kwds.el if a colon keyword is not avaulable.
	(w3m-colon-keywords): Abolished.

	* Makefile.in (keywords): Create w3m-kwds.el instead of
	w3mkwds.el; don't remove w3m-kwds.el in advance.
	(clean): Remove w3m-kwds.el instead of w3mkwds.el.
	(install): Install w3m-kwds.el if it exists.

2001-09-17  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-expand-url): Use `w3m-expand-path-name' instead of
	`expand-file-name'.

	* w3m-om.el (w3m-expand-path-name): New function.

	* w3m-e20.el (w3m-expand-path-name): New alias.

	* w3m-xmas.el (w3m-expand-path-name): Ditto.

	* w3m-e21.el (w3m-expand-path-name): Ditto.


2001-09-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search-engine-alist): Changed default value
	of `google'.  Add new engines `debian-pkg', `debian-bts', and
	`iij-archie'.

2001-09-17  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
